--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "redux": "^3.6.0",
     "redux-form": "^6.4.3",
     "redux-saga": "^0.14.3",
+    "redux-thunk": "^2.2.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
