--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -19,6 +19,7 @@
     "bson": "^1.0.1",
     "compression": "^1.6.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "express-jwt": "1.0.0",
