--- a/Client/package.json
+++ b/Client/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "faker": "^4.1.0",
+    "font-awesome": "^4.7.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
@@ -59,6 +60,7 @@
     "css-loader": "^0.26.1",
     "enzyme": "^2.7.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.10.1",
     "ignore-styles": "^5.0.1",
     "mocha": "^3.2.0",
     "node-sass": "^4.3.0",
@@ -67,6 +69,7 @@
     "redux-freeze": "^0.1.5",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.8",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2",
     "whatwg-fetch": "^2.0.1"
