--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -24,6 +24,7 @@
     "express": "~4.13.4",
     "express-jwt": "1.0.0",
     "jade": "~1.11.0",
+    "lodash": "^4.17.4",
     "mongoose": "3.8.23",
     "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
