--- a/Client/package.json
+++ b/Client/package.json
@@ -35,8 +35,11 @@
     "axios": "^0.15.3",
     "faker": "^4.1.0",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
